@@ -2,7 +2,10 @@
 
 	* build/vs2008/*: Made the Project/Solution tree much nicer.
 
-	* gmime/gmime-stream-gio.c (set_errno): Fixes to build on Windows.
+	* gmime/gmime-stream-gio.c: various warning fixes.
+	(set_errno): Fixes to build on Windows.
+	(gio_seekable_bound_end): This needs to return gint64, not
+	ssize_t.
 
 	* tests/test-streams.c: Use GDir instead of POSIX's dirent API and
 	also conditionally disable mmap tests.
